Upload only zip and zip checksum as artifacts on tag

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,4 +33,4 @@ jobs:
           name: ${{ steps.meta.outputs.os_arch }}-artifacts
           path: |
             build/dist/*.zip
-            build/dist/*.checksum
+            build/dist/*.zip.checksum
