--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,11 @@
 name: CI
 on:
-  push:
-    tags:
-      - 'v*'
+  workflow_dispatch:
+    inputs:
+      release-version:
+        description: "(WARNING: WILL TRIGGER A RELEASE) Release version e.g. v0.0.1"
+        required: true
+        type: string
 jobs:
   build:
     name: Build on ${{ matrix.os }}
@@ -20,17 +23,40 @@ jobs:
         uses: actions/checkout@v2
       - name: Extract version metadata
         id: meta
+        shell: bash
         run: |
-          echo "::set-output name=version::${GITHUB_REF##*/v}"
+          version=${{ github.event.inputs.release-version }}
+          echo "user triggered release ${version}"
+          
+          # =~ is bash regex operator 
+          if [[ ! "$version" =~ ^v{1}[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo "invalid tag version $version (must be of form vX.X.X), exiting"
+            exit 1
+          fi
+          
+          echo "::set-output name=version::${version}"
           echo "::set-output name=os_arch::$(go env GOOS)-$(go env GOARCH)"
+      - name: Tag
+        id: tag
+        env:
+          version: ${{ steps.meta.outputs.version }}
+        run: |
+          echo "Tagging $version"
+          git config user.name "quorumbot"
+          git tag -a "$version" -m "$version"
+          git push --tags
       - name: Build and package
+        env:
+          version: ${{ steps.meta.outputs.version }}
         run: |
           export PATH=$PATH:$(go env GOPATH)/bin
-          make default package VERSION=${{ steps.meta.outputs.version }}
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+          make default package VERSION="$version"
+      - name: Create release
+        uses: softprops/action-gh-release@v1
+        env:
+          version: ${{ steps.meta.outputs.version }}
         with:
-          name: ${{ steps.meta.outputs.os_arch }}-artifacts
-          path: |
+          tag_name: $version
+          files: |
             build/dist/*.zip
             build/dist/*.zip.checksum
